[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "icl-non-ergodic-arxiv"
version = "0.1.0"
description = "Utilities and scripts for exploring non-ergodic in-context learning behavior on the arXiv dataset."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Example"}]
dependencies = [
    "datasets",
    "transformers"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
